# estaty

./: Dockerfile  LICENSE  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  start.sh
app/: launch.py  main.py
cases/: green_area_advanced.py  green_area_sample.py  green_area_simple.py
cases/green_area/: README.md  advanced_with_landsat.py  simple_with_osm_only.py
cases/proximity/: README.md  path_to_bars.py  path_to_lights.py  path_to_parks.py  path_to_parks_with_ambrosia.py  path_to_parks_with_quercus.py  path_to_police.py  path_to_schools.py  path_to_toilets.py  path_to_waste_disposal.py  path_to_water.py
docs/: index.md
docs/cases/: green_area.md  proximity.md
docs/common/: faq.md  functionality_review.md
docs/documentation/: advanced_examples.md  data_source.md  merger.md  preprocessor.md  quickstart.md  report.md
docs/services/: greendex.md
estaty/: action.py  actions.py  constants.py  main.py  paths.py  stages.py  tmp.py
estaty/analysis/: action.py
estaty/api/: default.py  estaty_api.py  main.py
estaty/api_utils/: property.py
estaty/data/: data.py  search.py
estaty/data_source/: action.py
estaty/experiment/: administrative.py  explore.py
estaty/merge/: action.py  vector_merge.py
estaty/osm_plugin/: green_case.py  load.py
estaty/preprocessing/: action.py  project.py
estaty/presets/: green.py  interface.py
estaty/report/: action.py  std_report.py
estaty/repository/: labels.py
examples/: green_case.py  green_case_advanced.py  green_case_simple.py  load_carto.py
examples/flexible_structures/: simple_load_flixible.py
examples/load_data/: load_gbif_ambrosia_local.py  load_osm_lights.py  load_osm_parks.py  load_osm_paths.py  load_osm_water.py  load_several_branches.py  (+1 more)
(+33 files in other folders)
