[tool.poetry]
name = "estaty"
version = "0.1.0"
description = ""
authors = ["Dreamlone <mik_sar@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
osmnx = "^1.2.2"
geopandas = "^0.12.1"
matplotlib = "^3.6.2"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
