[tool.poetry]
name = "estaty"
version = "0.1.0"
description = "Module for spatial data fusion and processing for real estate objects. estaty is Python-based platform to obtain and merge open spatial data with not very open and not very spatial to create “real estate use cases”. Library provide tools for loaded data merging, pairwise source verification, proximity analysis, etc. "
authors = ["Dreamlone <mik.sarafanov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
osmnx = "^1.2.2"
geopandas = "^0.12.1"
matplotlib = "^3.6.2"
loguru = "^0.6.0"
pytest = "^7.2.0"
scikit-learn = "^1.2.0"
carto = "^1.11.3"
openpyxl = "^3.0.10"
seaborn = "^0.12.2"
tqdm = "^4.66.1"
contextily = "^1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
